--- a/ewanB/index.html
+++ b/ewanB/index.html
@@ -64,7 +64,7 @@
     <iframe width="880" height="512" src="https://www.youtube.com/embed/gHcqpAqL0PI?si=nagtphETy7z3dVMi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <script type="module" src="/main.js"></script>
-
+<link rel="stylesheet" href="style.css">
 
 </body>
 </html>
